Add popularity sort to corresponding controllers
