# app/Http/Requests/Menu/IndexMenuRequest.php
@@ -4,13 +4,27 @@ namespace App\Http\Requests\Menu;
 
 use App\Http\Filters\RestaurantsFilter;
 use App\Http\Requests\Crud\IndexRequest;
+use Illuminate\Database\Eloquent\Builder as EloquentBuilder;
+use Illuminate\Database\Query\Builder;
 use Spatie\QueryBuilder\AllowedFilter;
+use Spatie\QueryBuilder\AllowedSort;
+use Spatie\QueryBuilder\QueryBuilder as SpatieBuilder;
 
 /**
  * Class IndexMenuRequest.
  */
 class IndexMenuRequest extends IndexRequest
 {
+    public function getAllowedSorts(): array
+    {
+        return array_merge(
+            parent::getAllowedSorts(),
+            [
+                AllowedSort::field('popularity'),
+            ]
+        );
+    }
+
     public function getAllowedIncludes(): array
     {
         return array_merge(
@@ -47,5 +61,18 @@ class IndexMenuRequest extends IndexRequest
                 //
             ]
         );
+    }
+
+    /**
+     * Apply allowed options to spatie builder.
+     *
+     * @param Builder|EloquentBuilder|SpatieBuilder $builder
+     *
+     * @return SpatieBuilder
+     */
+    public function spatieBuilder(SpatieBuilder|EloquentBuilder|Builder $builder): SpatieBuilder
+    {
+        return parent::spatieBuilder($builder)
+            ->defaultSort('-popularity');
     }
 }
