# app/Http/Requests/Product/IndexProductRequest.php
@@ -6,13 +6,27 @@ use App\Http\Filters\CategoriesFilter;
 use App\Http\Filters\MenusFilter;
 use App\Http\Filters\RestaurantsFilter;
 use App\Http\Requests\Crud\IndexRequest;
+use Illuminate\Database\Eloquent\Builder as EloquentBuilder;
+use Illuminate\Database\Query\Builder;
 use Spatie\QueryBuilder\AllowedFilter;
+use Spatie\QueryBuilder\AllowedSort;
+use Spatie\QueryBuilder\QueryBuilder as SpatieBuilder;
 
 /**
  * Class IndexProductRequest.
  */
 class IndexProductRequest extends IndexRequest
 {
+    public function getAllowedSorts(): array
+    {
+        return array_merge(
+            parent::getAllowedSorts(),
+            [
+                AllowedSort::field('popularity'),
+            ]
+        );
+    }
+
     public function getAllowedIncludes(): array
     {
         return array_merge(
@@ -52,5 +66,18 @@ class IndexProductRequest extends IndexRequest
                 //
             ]
         );
+    }
+
+    /**
+     * Apply allowed options to spatie builder.
+     *
+     * @param Builder|EloquentBuilder|SpatieBuilder $builder
+     *
+     * @return SpatieBuilder
+     */
+    public function spatieBuilder(SpatieBuilder|EloquentBuilder|Builder $builder): SpatieBuilder
+    {
+        return parent::spatieBuilder($builder)
+            ->defaultSort('-popularity');
     }
 }
